@@ -21,17 +21,13 @@ class PhotoImageClutter(PhotoImage):
         self.stage.set_color(clutter.Color(220, 220, 220, 0))
 
         self.photo_image = ActorPhotoImage(self.stage)
+        self.photo_image.show()
         self.source_icon = ActorSourceIcon(self.stage)
+        self.source_icon.show()
         self.geo_icon = ActorGeoIcon(self.stage)
 
         self.embed.show()
         self.image = self.embed
-
-    def check_actor(self, stage, event):
-        actor = self.stage.get_actor_at_pos(clutter.PICK_ALL, 
-                                            int(event.x), int(event.y))
-        result = (actor != self.photo_image.texture)
-        return result
 
     def _set_photo_image(self, pixbuf):
         border = self.conf.get_int('border_width', 10)
@@ -42,7 +38,7 @@ class PhotoImageClutter(PhotoImage):
         self.h = pixbuf.get_height()
         self.embed.set_size_request(self.w + border, self.h + border)
 
-        self.photo_image.show(pixbuf, position, position)
+        self.photo_image.change(pixbuf, position, position)
         self.source_icon.show_icon(self.photo, self.w - position - 20, 20)
         self.geo_icon.show_icon(self.photo, self.w - position - 20, 
                                 self.h - position - 20)
@@ -50,18 +46,36 @@ class PhotoImageClutter(PhotoImage):
     def clear(self):
         pass
 
+    def on_enter_cb(self, w, e):
+        self.geo_icon.show()
+
+    def on_leave_cb(self, w, e):
+        self.geo_icon.hide()
+
+    def check_actor(self, stage, event):
+        actor = self.stage.get_actor_at_pos(clutter.PICK_ALL, 
+                                            int(event.x), int(event.y))
+        result = (actor != self.photo_image.texture)
+        return result
+
 class ActorPhotoImage(object):
 
     def __init__(self, stage):
         self.texture = cluttergtk.Texture()
-        stage.add(self.texture)
         self.texture.set_reactive(True)
-
+        self.texture.hide()
         self.texture.connect('button-press-event', self._on_button_press_cb)
+        stage.add(self.texture)
 
-    def show(self, pixbuf, x, y):
+    def change(self, pixbuf, x, y):
         self._set_texture_from_pixbuf(self.texture, pixbuf)
         self.texture.set_position(x, y)
+
+    def show(self):
+        self.texture.show()
+
+    def hide(self):
+        self.texture.hide()
 
     def _on_button_press_cb(self, actor, event):
         pass
@@ -83,7 +97,7 @@ class ActorSourceIcon(ActorPhotoImage):
         self.photo = photo
         icon = self.photo.get('icon')()# or SourceIcon
         icon_pixbuf = icon.get_pixbuf()
-        self.show(icon_pixbuf, x, y)
+        self.change(icon_pixbuf, x, y)
 
     def _on_button_press_cb(self, actor, event):
         self.photo.open()
@@ -94,7 +108,7 @@ class ActorGeoIcon(ActorPhotoImage):
         self.photo = photo
         icon = SourceIcon('gnome-globe')
         icon_pixbuf = icon.get_pixbuf()
-        self.show(icon_pixbuf, x, y)
+        self.change(icon_pixbuf, x, y)
 
     def _on_button_press_cb(self, actor, event):
         pass
